tests/NormalTests/paczka1/fuzzy1/56485041.err
Error in line 6: l1QcdcSGayi A873 78,26
Error in line 7: bGo A873 94,7
Error in line 5: l1QcdcSGayi S840 55,6
Error in line 38: tOrkTnu A185 103,52
Error in line 39: 0JKPcD A873 59,2
